// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`none selected renders with none highlighted 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonDaily"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Daily
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonWeekly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Weekly
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonMonthly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Monthly
    </Text>
  </View>
</View>
`;

exports[`starts with daily selected renders with daily highlighted 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3CC8E6",
        "borderRadius": 35,
        "borderWidth": 0,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonDaily"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#ffffff",
            },
          ],
        ]
      }
    >
      Daily
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonWeekly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Weekly
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonMonthly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Monthly
    </Text>
  </View>
</View>
`;

exports[`starts with monthly selected renders with monthly highlighted 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonDaily"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Daily
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonWeekly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Weekly
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3CC8E6",
        "borderRadius": 35,
        "borderWidth": 0,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonMonthly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#ffffff",
            },
          ],
        ]
      }
    >
      Monthly
    </Text>
  </View>
</View>
`;

exports[`starts with weekly selected renders with weekly highlighted 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonDaily"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Daily
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#3CC8E6",
        "borderRadius": 35,
        "borderWidth": 0,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonWeekly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#ffffff",
            },
          ],
        ]
      }
    >
      Weekly
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ffffff",
        "borderColor": "#B4B6BA",
        "borderRadius": 35,
        "borderWidth": 1,
        "height": 70,
        "justifyContent": "center",
        "margin": 8,
        "opacity": 1,
        "paddingHorizontal": 0,
        "paddingVertical": 0,
        "width": 70,
      }
    }
    testID="ReminderRepeatButtonMonthly"
  >
    <Text
      style={
        Array [
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Bold",
            "fontSize": 14,
            "fontStyle": "normal",
            "letterSpacing": 1,
            "lineHeight": 18,
            "textAlign": "center",
            "textAlignVertical": "center",
            "textTransform": "uppercase",
          },
          Array [
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      Monthly
    </Text>
  </View>
</View>
`;
